--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,7 +2,12 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %} _ Accueil _ {% endblock %}</title>
+
+        <!-- Bootstrap core CSS -->
+		<link href="{{ asset('../public/assets/css/bootstrap_2_.min.css') }}" rel="stylesheet">
+
+
         {# Run `composer require symfony/webpack-encore-bundle`
            and uncomment the following Encore helpers to start using Symfony UX #}
         {% block stylesheets %}
@@ -14,6 +19,9 @@
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+        {% block body %}
+        
+        
+        {% endblock %}
     </body>
 </html>
