--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,7 +5,7 @@
         <title>{% block title %} _ Accueil _ {% endblock %}</title>
 
         <!-- Bootstrap core CSS -->
-		<link href="{{ asset('../public/assets/css/bootstrap_2_.min.css') }}" rel="stylesheet">
+		<link href="{{ asset('assets/css/bootstrap_2_.min.css') }}" rel="stylesheet">
 
 
         {# Run `composer require symfony/webpack-encore-bundle`
