--- a/templates/liste_stagiaire/index.html.twig
+++ b/templates/liste_stagiaire/index.html.twig
@@ -11,18 +11,32 @@
 				n°{{loop.index ~ ' / ' ~ loop.length}}
 				- id :
 				{{liste.id}}<br>
-				{{liste.civilite ~ '  ' ~ liste.nom ~ '  ' ~ liste.prenom}}<br>
-				- Adresse : {{liste.adresse}}
-                - Téléphone : {{liste.telephone}}
-                - Mail : {{liste.email}}
-                <h6>{{liste.formation}}</h6>
-                - Année : {% if not liste.annee %}
-                                <h7> - Non communiqué - </h7>
-                            {% else %}
-                                <h7-2>{{liste.annee}}</h7-2>
-                          {% endif %}
+				<span class="civilite">{{liste.civilite ~ '  ' ~ liste.nom ~ '  ' ~ liste.prenom}}</span><br>
+
+				<span class="champs">- Adresse :</span>
+				<span>{{liste.adresse}}</span><br>
+
+
+				<span class="champs">- Téléphone :</span>
+				<span>{{liste.telephone}}</span><br>
+
+
+				<span class="champs">- Mail :</span>
+				<span>{{liste.email}}</span><br>
+
+
+				<h6>{{liste.formation}}</h6>
+				<p class='annee'>- Année :
+					{% if not liste.annee %}
+						<h7>
+							- Non communiqué -
+						</h7>
+					{% else %}
+						<h7-2>{{liste.annee}}</h7-2>
+					{% endif %}
+				</p>
 			</li>
-		<hr>
+			<hr>
 		{% endfor %}
 	</ul>
 
